--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,9 @@
     "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "./",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "include": ["src/**/*", "tests/**/*", "questions/**/*"],
+  "include": ["src/**/*", "./types", "questions/**/*", "answers/**/*"],
   "exclude": ["node_modules"]
 }
