--- a/blind-75/tsconfig.json
+++ b/blind-75/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "include": ["src/**/*", "./types", "questions/**/*", "answers/**/*"],
+  "include": ["src/**/*", "types", "questions/**/*", "answers/**/*"],
   "exclude": ["node_modules"]
 }
+
